fix scroll animation mobile

--- a/mobile.css
+++ b/mobile.css
@@ -151,13 +151,10 @@ position:relative;
 }
 .tabber-menu__box {
 	display:block;
-	transition: transform 0.3s ease, bottom 0.3s ease !important;
+	transition: transform 0.3s ease !important;
 }
 .tabber-menu__box.hidden {
 	transform: translateY(100%) !important;
-}
-.tabber-menu__box.above-bar {
-	bottom: 68px !important;
 }
 .page-header {
 	transition: transform 0.3s ease !important;
@@ -1278,8 +1275,12 @@ body:has(.page-header) main {
 	box-sizing: border-box !important;
 	align-items: center !important;
 	justify-content: space-between !important;
-	z-index: 13 !important;
+	z-index: 9 !important;
 	box-shadow: 0 -2px 10px rgba(0,0,0,0.1) !important;
+	transition: bottom 0.3s ease !important;
+}
+.sticky-bottom-bar.above-tabber {
+	bottom: 58px !important;
 }
 .sticky-bottom-bar.active {
 	display: flex !important;
